<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    style="@style/DialogStyle">
    <EditText
        android:id="@+id/wifiName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     
        android:singleLine="true"
        android:hint="@string/wifi_name"/>
    <EditText
        android:id="@+id/wifiDialogPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:singleLine="true"
        android:hint="@string/wifi_psw"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psw_store" />
   
</LinearLayout>
